Fix: Remove unnecessary overflow
Fix: Remove unnecessary overflow: hidden to resolve scrollbar issue in Turkish/German settings

--- a/src/renderer/views/Settings/Settings.css
+++ b/src/renderer/views/Settings/Settings.css
@@ -5,7 +5,7 @@
 
 .settingsSections,
 .switchRow {
-  overflow-x: hidden;
+  
   max-inline-size: 90%;
 }
 
